# pyrolizservo

./: AvtomotiveServo.OutJob  AvtomotiveServo.PrjPcb  PCB1.PcbDoc  PcbLib1.PcbLib  README.md  Sheet1.SchDoc
Project Outputs for AvtomotiveServo/: PCB1.BOM  PCB1.CSV  Status Report.Txt
__Previews/: PCB1.PcbDocPreview  Sheet1.SchDocPreview
prog/: avtserv.cwp  avtserv.prj
prog/build-src-AVR-release/: AvtomotiveServo  AvtomotiveServo.cbp  AvtomotiveServo.hex  CMakeCache.txt  Makefile  cmake_install.cmake
prog/src/: CMakeLists.txt
prog/src/inc/: adc.h  input.h  leds.h  motor.h
prog/src/src/: adc.c  avtserv.c  input.c  leds.c  motor.c
